--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -10,7 +10,7 @@
 <div class="bg-neutral-300">
  <section id="login" class="p-1 flex flex-col justify-center min-h-screen max-w-md mx-auto">   
     <div class="flex justify-center mb-4">
-       <img src="https://bluejaypms.com/data_news/bn-7194.png"
+       <img src="~/images/logoPMS.png"
        class="w-15 h-3.75 object-contain" alt="kjsDk"  />
    </div>
    <div class="p-8 bg-white rounded-xl">
