--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -11,7 +11,7 @@
  <section id="login" class="p-1 flex flex-col justify-center min-h-screen max-w-md mx-auto">   
     <div class="flex justify-center mb-4">
        <img src="~/images/logoPMS.png"
-       class="w-15 h-3.75 object-contain" alt="kjsDk"  />
+       class="w-15 h-3.75 object-contain" alt="PMS_LOGO"  />
    </div>
    <div class="p-8 bg-white rounded-xl rounded-lg">
        <div class="flex items-center justify-center text-2xl font-black m-3">       
