--- a/Views/Detail/Detail.cshtml
+++ b/Views/Detail/Detail.cshtml
@@ -16,37 +16,37 @@
     <div class="content-main">
         <div class="comeback">
             <button>
-                <i class="fa-solid fa-plus"></i>
+                <i class="fa-solid fa-arrow-left"></i>
                 <span class="title">Previous</span>
             </button>
-             <button>
-                <i class="fa-solid fa-plus"></i>
+            <button>
+                <i class="fa-solid fa-arrow-right"></i>
                 <span class="title">Next</span>
             </button>
         </div>
         <div class="feature">
-            <button>
-                <i class="fa-solid fa-plus"></i>
+            <button class="advance-edit">
+                <i class="fa-regular fa-pen-to-square"></i>
                 <span class="title">Advance edit</span>
             </button>
-             <button>
-                <i class="fa-solid fa-plus"></i>
+            <button class="edit">
+                <i class="fa-solid fa-pen"></i>
                 <span class="title">Edit</span>
             </button>
-             <button>
-                <i class="fa-solid fa-plus"></i>
+            <button class="deactivate">
+                <i class="fa-solid fa-ban"></i>
                 <span class="title">Deactivate</span>
             </button>
         </div>
         <div class="wrap">
             <h3>Name</h3> <br>
             <div class="content" id="productName">
-                <p>Summer fesh</p>
+
             </div>
 
-            <h3>Description</h3><br>
+            <h3 class="h3Name">Description</h3><br>
             <div class="content" id="productDetails">
-              
+
             </div>
 
         </div>
