--- a/wwwroot/css/Home.css
+++ b/wwwroot/css/Home.css
@@ -66,7 +66,7 @@ body {
 
 .navigation ul li:hover,
 .navigation ul li.hovered {
-  /* background-color: var(--blue-sidebav); */
+  background-color: var(--blue-sidebav);
 }
 
 .navigation ul li:nth-child(1) {
