--- a/Views/Shared/Layout.cshtml
+++ b/Views/Shared/Layout.cshtml
@@ -1,7 +1,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - My .NET Core App</title>
+    <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="~/css/Home.css" />
     <script src="https://momentjs.com/downloads/moment-with-locales.min.js"></script>
