fig UI and create calendar

--- a/Views/CreateForm/CreateForm.cshtml
+++ b/Views/CreateForm/CreateForm.cshtml
@@ -45,11 +45,11 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <label for="dayStart"><b>Day Start*</b></label>
+                    <label for="dayStart"><b>Date Start*</b></label>
                     <input type="date" class="form-control">
                 </div>
                 <div class="col">
-                    <label for="dayEnd"><b>Day End*</b></label>
+                    <label for="dayEnd"><b>Date End*</b></label>
                     <input type="date" class="form-control">
                 </div>
             </div>
@@ -64,7 +64,7 @@
                     </select>
                 </div>
                 <div>
-                    <label><b>Occupancy*</b></label>
+                    <label><b>Occupancy Limit*</b></label>
                     <select class="form-select" id="inlineFormSelectPref">
                         <option selected>Choose...</option>
                         <option value="1">One</option>
@@ -76,7 +76,7 @@
             </div>
             <div class="service">
                 <div>
-                    <label><b>Cancle policy*</b></label>
+                    <label><b>Cancle Policy*</b></label>
                     <select class="form-select" id="inlineFormSelectPref">
                         <option selected>Choose...</option>
                         <option value="1">One</option>
@@ -85,7 +85,7 @@
                     </select>
                 </div>
                 <div>
-                    <label><b>Payment constraint*</b></label><br>
+                    <label><b>Payment Constraint*</b></label><br>
                     <select class="form-select" id="inlineFormSelectPref">
                         <option selected>Choose...</option>
                         <option value="1">One</option>
