--- a/Views/Detail/Detail.cshtml
+++ b/Views/Detail/Detail.cshtml
@@ -33,10 +33,10 @@
                 <i class="fa-solid fa-pen"></i>
                 <span class="title">Edit</span>
             </button>
-            <button class="deactivate">
+            @* <button class="deactivate">
                 <i class="fa-solid fa-ban"></i>
                 <span class="title">Deactivate</span>
-            </button>
+            </button> *@
         </div>
         <div class="wrap">
             <h3>Name</h3> <br>
