--- a/Views/UpdateForm/UpdateForm.cshtml
+++ b/Views/UpdateForm/UpdateForm.cshtml
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create form</title>
+    <title>Upadte form</title>
     <link rel="stylesheet" href="~/css/RatePlan.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
@@ -30,7 +30,7 @@
                 <span class="title">Next</span>
             </button>
         </div>
-        <h1 class="create">Update</h1>
+        <h1 class="create">Upadte</h1>
         <h1>Rate Plan</h1>
         <form class="form">
             <div class="row">
@@ -45,11 +45,11 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <label for="dayStart"><b>Day Start*</b></label>
+                    <label for="dayStart"><b>Date Start*</b></label>
                     <input type="date" class="form-control">
                 </div>
                 <div class="col">
-                    <label for="dayEnd"><b>Day End*</b></label>
+                    <label for="dayEnd"><b>Date End*</b></label>
                     <input type="date" class="form-control">
                 </div>
             </div>
@@ -64,7 +64,7 @@
                     </select>
                 </div>
                 <div>
-                    <label><b>Occupancy*</b></label>
+                    <label><b>Occupancy Limit*</b></label>
                     <select class="form-select" id="inlineFormSelectPref">
                         <option selected>Choose...</option>
                         <option value="1">One</option>
@@ -76,7 +76,7 @@
             </div>
             <div class="service">
                 <div>
-                    <label><b>Cancle policy*</b></label>
+                    <label><b>Cancle Policy*</b></label>
                     <select class="form-select" id="inlineFormSelectPref">
                         <option selected>Choose...</option>
                         <option value="1">One</option>
@@ -85,7 +85,7 @@
                     </select>
                 </div>
                 <div>
-                    <label><b>Payment constraint*</b></label><br>
+                    <label><b>Payment Constraint*</b></label><br>
                     <select class="form-select" id="inlineFormSelectPref">
                         <option selected>Choose...</option>
                         <option value="1">One</option>
