add nagivate to createForm

--- a/Views/Home/Home.cshtml
+++ b/Views/Home/Home.cshtml
@@ -58,10 +58,12 @@
             </div>
         </div>
         <div class="createRate">
-            <button>
+            <a href="/createForm">
+                 <button>
                 <i class="fa-solid fa-plus"></i>
                 <span class="title">New Rate plan</span>
             </button>
+            </a>
         </div>
         <div class="filterBtn">
             <button onclick="filter()">
