--- a/Views/Home/Home.cshtml
+++ b/Views/Home/Home.cshtml
@@ -31,7 +31,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="/login" onclick="confirmLogout(event)">
                             <span class="icon"><i class="fa-solid fa-arrow-right-from-bracket"></i></span>
                             <span class="title">Log out</span>
                         </a>
@@ -59,10 +59,10 @@
         </div>
         <div class="createRate">
             <a href="/createForm">
-                 <button>
-                <i class="fa-solid fa-plus"></i>
-                <span class="title">New Rate plan</span>
-            </button>
+                <button>
+                    <i class="fa-solid fa-plus"></i>
+                    <span class="title">New Rate plan</span>
+                </button>
             </a>
         </div>
         <div class="filterBtn">
@@ -170,5 +170,3 @@
 
 
 </html>
-
-
