display data of rate

--- a/Views/Detail/Detail.cshtml
+++ b/Views/Detail/Detail.cshtml
@@ -15,10 +15,12 @@
 <body>
     <div class="content-main">
         <div class="comeback">
-            <button>
-                <i class="fa-solid fa-arrow-left"></i>
-                <span class="title">Previous</span>
-            </button>
+            <a href="">
+                <button>
+                    <i class="fa-solid fa-arrow-left"></i>
+                    <span class="title">Previous</span>
+                </button>
+            </a>
             <button>
                 <i class="fa-solid fa-arrow-right"></i>
                 <span class="title">Next</span>
@@ -29,13 +31,15 @@
                 <i class="fa-regular fa-pen-to-square"></i>
                 <span class="title">Advance edit</span>
             </button>
-            <button class="edit">
-                <i class="fa-solid fa-pen"></i>
-                <span class="title">Edit</span>
-            </button>
+            <a href="/updateForm">
+                <button class="edit">
+                    <i class="fa-solid fa-pen"></i>
+                    <span class="title">Edit</span>
+                </button>
+            </a>
             @* <button class="deactivate">
-                <i class="fa-solid fa-ban"></i>
-                <span class="title">Deactivate</span>
+            <i class="fa-solid fa-ban"></i>
+            <span class="title">Deactivate</span>
             </button> *@
         </div>
         <div class="wrap">
