--- a/Views/UpdateForm/UpdateForm.cshtml
+++ b/Views/UpdateForm/UpdateForm.cshtml
@@ -38,28 +38,28 @@
             <div class="row">
                 <div class="col">
                     <label for="name"><b>Name*</b></label>
-                    <input type="text" class="form-control" placeholder="Rate plan name">
+                    <input type="text" class="form-control" id="name"  placeholder="Rate plan name">
                 </div>
                 <div class="col">
                     <label for="price"><b>Price*</b></label>
-                    <input type="text" class="form-control" placeholder="Price">
+                    <input type="text" class="form-control" id="price" placeholder="Price">
                 </div>
             </div>
             <div class="row">
                 <div class="col">
                     <label for="dayStart"><b>Date Start*</b></label>
-                    <input type="date" class="form-control">
+                    <input type="date" id="dayStart" class="form-control">
                 </div>
                 <div class="col">
                     <label for="dayEnd"><b>Date End*</b></label>
-                    <input type="date" class="form-control">
+                    <input type="date" id="dayEnd" class="form-control">
                 </div>
             </div>
             <div class="service">
                 <div>
                     <label><b>Room Type*</b></label>
-                    <select class="form-select" id="inlineFormSelectPref">
-                        <option selected>Choose...</option>
+                    <select class="form-select"  id="roomType">
+                        <option selected id="roomType">Choose...</option>
                         <option value="1">One</option>
                         <option value="2">Two</option>
                         <option value="3">Three</option>
@@ -67,19 +67,14 @@
                 </div>
                 <div>
                     <label><b>Occupancy Limit*</b></label>
-                    <select class="form-select" id="inlineFormSelectPref">
-                        <option selected>Choose...</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option>
-                    </select>
+                    <input type="text" class="form-control" id="occupancyLimit" placeholder="Occupancy">
                 </div>
 
             </div>
             <div class="service">
                 <div>
                     <label><b>Cancle Policy*</b></label>
-                    <select class="form-select" id="inlineFormSelectPref">
+                    <select class="form-select" id="cancelPolicy">
                         <option selected>Choose...</option>
                         <option value="1">One</option>
                         <option value="2">Two</option>
@@ -88,7 +83,7 @@
                 </div>
                 <div>
                     <label><b>Payment Constraint*</b></label><br>
-                    <select class="form-select" id="inlineFormSelectPref">
+                    <select class="form-select" id="paymentConstraint">
                         <option selected>Choose...</option>
                         <option value="1">One</option>
                         <option value="2">Two</option>
@@ -104,10 +99,10 @@
                         <span class="selected-value">Open this select menu</span>
                         <span class="arrow"></span>
                     </button>
-                    <ul class="select-dropdown">
+                    <ul class="select-dropdown" id="addtional">
                         <li>
                             <input type="checkbox" id="breakfast" />
-                            <label for="breakfast">Breakfast</label>
+                            <label for="breakfast">Breakfast</label> 
                         </li>
                         <li>
                             <input type="checkbox" id="dinner" />
@@ -117,8 +112,8 @@
                 </div>
                 <div>
                     <label><b>Status*</b></label><br>
-                    <select class="form-select" id="inlineFormSelectPref">
-                        <option selected>Choose...</option>
+                    <select class="form-select" id="status">
+                        @* <option selected>Choose...</option> *@
                         <option value="1">Active</option>
                         <option value="2">Inactive</option>
                     </select>
