--- a/wwwroot/css/Calendar.css
+++ b/wwwroot/css/Calendar.css
@@ -1,5 +1,5 @@
 body {
-    overflow: hidden;
+    overflow: auto;
     font-family: "Inter";
     margin: 0;
     padding: 0;
@@ -29,10 +29,10 @@ body {
     -moz-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
     width: 1000px;
-    margin: 0 auto;
-    height: 570px;
-    overflow: hidden;
-    margin-top: 50px;
+    margin: 50px auto;
+    height: auto;
+    overflow: visible;
+    /* margin-top: 50px; */
   }
   
   .header {
