--- a/Views/Calendar/Calendar.cshtml
+++ b/Views/Calendar/Calendar.cshtml
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-     <div class="comeback">
+     @* <div class="comeback">
             <button>
                 <i class="fa-solid fa-arrow-left"></i>
                 <span class="title">Previous</span>
@@ -22,7 +22,7 @@
                 <i class="fa-solid fa-arrow-right"></i>
                 <span class="title">Next</span>
             </button>
-        </div>
+        </div> *@
     <div id="calendar"></div>
 </body>
 <script src="~/js/Calendar.js"></script>
