--- a/Views/Detail/Detail.cshtml
+++ b/Views/Detail/Detail.cshtml
@@ -25,17 +25,19 @@
             </button>
         </div>
         <div class="feature">
-            <button class="advance-edit">
-                <i class="fa-regular fa-pen-to-square"></i>
-                <span class="title">Advance edit</span>
-            </button>
+            <a href="/calendar">
+                <button class="advance-edit">
+                    <i class="fa-regular fa-pen-to-square"></i>
+                    <span class="title">Advance edit</span>
+                </button>
+            </a>
             <button class="edit">
                 <i class="fa-solid fa-pen"></i>
                 <span class="title">Edit</span>
             </button>
             @* <button class="deactivate">
-                <i class="fa-solid fa-ban"></i>
-                <span class="title">Deactivate</span>
+            <i class="fa-solid fa-ban"></i>
+            <span class="title">Deactivate</span>
             </button> *@
         </div>
         <div class="wrap">
